[gd_scene load_steps=3 format=2]

[ext_resource path="res://SelectFromDB.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.188235, 0.172549, 0.203922, 1 )

[node name="Node2D" type="Node2D"]
position = Vector2( 55, 43 )
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 73.0
margin_bottom = 23.0
text = "Insert Data"

[node name="Button2" type="Button" parent="."]
margin_left = 3.0
margin_top = 43.0
margin_right = 73.0
margin_bottom = 63.0
text = "Select Data"

[node name="Button3" type="Button" parent="."]
margin_left = 3.0
margin_top = 79.0
margin_right = 87.0
margin_bottom = 99.0
text = "Update Data"

[node name="Button4" type="Button" parent="."]
margin_left = 344.0
margin_top = 3.0
margin_right = 435.0
margin_bottom = 23.0
text = "Login"

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 158.0
margin_top = 4.0
margin_right = 301.0
margin_bottom = 22.0

[node name="TextEdit2" type="TextEdit" parent="."]
margin_left = 158.0
margin_top = 44.0
margin_right = 301.0
margin_bottom = 62.0

[node name="TextEdit3" type="TextEdit" parent="."]
margin_left = 158.0
margin_top = 81.0
margin_right = 301.0
margin_bottom = 99.0

[node name="TextEdit4" type="TextEdit" parent="."]
margin_left = 158.0
margin_top = 118.0
margin_right = 301.0
margin_bottom = 136.0

[node name="TextEdit5" type="TextEdit" parent="."]
margin_left = 518.0
margin_top = 6.0
margin_right = 661.0
margin_bottom = 24.0

[node name="TextEdit6" type="TextEdit" parent="."]
margin_left = 518.0
margin_top = 44.0
margin_right = 661.0
margin_bottom = 62.0
custom_colors/executing_line_color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 96.0
margin_top = 5.0
margin_right = 136.0
margin_bottom = 19.0
text = "ID"

[node name="Label2" type="Label" parent="."]
margin_left = 96.0
margin_top = 46.0
margin_right = 136.0
margin_bottom = 60.0
text = "Name"

[node name="Label7" type="Label" parent="."]
margin_left = 451.0
margin_top = 5.0
margin_right = 491.0
margin_bottom = 19.0
text = "Name"

[node name="Label3" type="Label" parent="."]
margin_left = 96.0
margin_top = 82.0
margin_right = 136.0
margin_bottom = 96.0
text = "Score"

[node name="Label4" type="Label" parent="."]
margin_left = 95.0
margin_top = 120.0
margin_right = 155.0
margin_bottom = 134.0
text = "Password"

[node name="Label8" type="Label" parent="."]
margin_left = 451.0
margin_top = 46.0
margin_right = 511.0
margin_bottom = 60.0
text = "Password"

[node name="Label9" type="Label" parent="."]
margin_left = 451.0
margin_top = 82.0
margin_right = 511.0
margin_bottom = 96.0
text = "Score"

[node name="Label10" type="Label" parent="."]
margin_left = 518.0
margin_top = 82.0
margin_right = 578.0
margin_bottom = 96.0
text = "-"

[node name="Label5" type="Label" parent="."]
margin_left = 123.0
margin_top = -32.0
margin_right = 183.0
margin_bottom = -18.0
text = "Register"

[node name="Label6" type="Label" parent="."]
margin_left = 518.0
margin_top = -32.0
margin_right = 578.0
margin_bottom = -18.0
text = "Login"

[node name="Label11" type="Label" parent="."]
margin_left = 123.0
margin_top = 167.0
margin_right = 596.0
margin_bottom = 310.0
custom_styles/normal = SubResource( 1 )

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="Button3" to="." method="_on_Button3_button_down"]
[connection signal="button_down" from="Button4" to="." method="_on_Button4_button_down"]
